# DeckEncoder

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  gtest.yml
deck_encoder/: CMakeLists.txt
deck_encoder/include/deck_codec/: base32.h  card_token.h  codec.h  deck_design.h  region.h  string_utils.h  utils.h  varint.h
deck_encoder/src/: base32.cpp  codec.cpp  main.cpp  string_utils.cpp  varint.cpp
test/: CMakeLists.txt  main_test.cpp  test_base32.cpp  test_codec.cpp
